--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ next-env.d.ts
 # firebase
 firebase-debug.log
 firestore-debug.log
+
+# Build artifacts
+extension.crx
+extension.pem
+
+# macOS
+.DS_Store
